# CSE380

./: README.md
hw02/: .gitignore  add.sh  factorial.sh  pi.compiled.job  pi.cpp  pi.jobscript  pi.script.job  pi.sh  tri.sh
hw02/launcher/: Parametric.o2198764  Parametric.o2198785  launcher.slurm  launcher_cmds.txt
hw03/integration/: .gitignore  Err_Function_Mod.f90  Integral_Mod.f90  Makefile  Str2int_Mod.f90  convergence_analysis.sh  main.f90  result_Simpson.txt  result_trapezoid.txt
hw03/make/: Makefile
hw04/: 04-assignment.tex
proj01/: .gitignore  Makefile.am  Makefile.in  Sparse_Matrix_Mod.f90  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.sh
proj01/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
proj01/coverage/lcov/: index-sort-f.html  index-sort-l.html  index.html  lcov.info
proj01/coverage/lcov/src/: Get_Matrix_Mod.f90.func-sort-c.html  Get_Matrix_Mod.f90.func.html  Get_Matrix_Mod.f90.gcov.html  Get_Mesh_Mod.f90.func-sort-c.html  Get_Mesh_Mod.f90.func.html  Get_Mesh_Mod.f90.gcov.html  Get_Source_Mod.f90.func-sort-c.html  Get_Source_Mod.f90.func.html  Get_Source_Mod.f90.gcov.html  Initialize_Mod.f90.func-sort-c.html  Initialize_Mod.f90.func.html  Initialize_Mod.f90.gcov.html  Jacobi_GS_Mod.f90.func-sort-c.html  Jacobi_GS_Mod.f90.func.html  Jacobi_GS_Mod.f90.gcov.html  Postprocess_Mod.f90.func-sort-c.html  Postprocess_Mod.f90.func.html  Postprocess_Mod.f90.gcov.html  Read_Input_Mod.f90.func-sort-c.html  Read_Input_Mod.f90.func.html  Read_Input_Mod.f90.gcov.html  Solve_System_Mod.f90.func-sort-c.html  Solve_System_Mod.f90.func.html  Solve_System_Mod.f90.gcov.html  Sparse_Matrix_Mod.f90.func-sort-c.html  Sparse_Matrix_Mod.f90.func.html  Sparse_Matrix_Mod.f90.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main.f90.func-sort-c.html  main.f90.func.html  main.f90.gcov.html
proj01/docs/: main.tex
proj01/src/: .gitignore  Control_Parameters_Mod.F90  Control_Parameters_Mod.f90  Get_Matrix_Mod.f90  Get_Mesh_Mod.f90  Get_Source_Mod.f90  Initialize_Mod.f90  Jacobi_GS_Mod.f90  Makefile  Makefile.am  Makefile.in  Postprocess_Mod.f90  Read_Input_Mod.f90  Solve_Common_Mod.F90  Solve_Common_Mod.f90  Solve_System_Mod.F90  Solve_System_Mod.f90  Sparse_Matrix_Mod.f90  main.f90  test_iteration.f90
proj01/test/: Makefile.am  ref_1D_order2_GS.h5  ref_1D_order2_J.h5  ref_2D_order2_GS.h5  test_1D_order2_GS.bats  test_1D_order2_J.bats  test_1D_order4_GS.bats  test_2D_order2_GS.bats  test_2D_order2_J.bats  test_2D_order4_GS.bats  test_exec.bats
proj02/: .gitignore
proj02/coverage/lcov/src/: Get_Matrix_Mod.f90.func-sort-c.html  Get_Matrix_Mod.f90.func.html  Get_Matrix_Mod.f90.gcov.html  Get_Mesh_Mod.f90.func-sort-c.html  Get_Source_Mod.f90.gcov.html  Initialize_Mod.f90.func.html  Jacobi_GS_Mod.f90.gcov.html  Postprocess_Mod.f90.func-sort-c.html  Solve_System_Mod.f90.func.html  Sparse_Matrix_Mod.f90.func-sort-c.html  Sparse_Matrix_Mod.f90.func.html  index-sort-f.html  index.html  main.f90.func-sort-c.html  main.f90.func.html
proj02/docs/: main.tex
proj02/m4/: hdf5.m4
proj02/src/: Solve_System_Mod.F90  Sparse_Matrix_Mod.F90
proj02/test/: .gitignore  ref_1D_order4_GS.h5  ref_2D_order2_J.h5  ref_2D_order4_GS.h5  test_2D_order2_GS.bats  test_2D_order2_J.bats
